--- a/project/visionos/improving-accessibility-support-in-your-app.yml
+++ b/project/visionos/improving-accessibility-support-in-your-app.yml
@@ -3,16 +3,16 @@
   翻译: '在你的 visionOS 应用中增强对辅助功能的支持'
 - 内容: 'Update your code to ensure everyone can access your app’s content in visionOS.'
   提示: ''
-  翻译: '更新你的代码以确保所有用户都可以通过 visionOS 访问你的应用内容。'
+  翻译: '更新你的代码以确保所有用户都可以在 visionOS 中访问你的应用内容。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概览'
 - 内容: 'visionOS is an immersive platform that supports people of all abilities. Even though experiences incorporate stunning visual content and hand- and eye-tracking technologies, people can engage with content in other ways. In fact, the platform supports people in many different situations, including those who are blind, have low vision, have limited mobility, or have limb differences. With the help of assistive technologies, people can interact with all of your app’s content.'
   提示: ''
-  翻译: 'visionOS 是一个全方位支持不同能力使用者的沉浸式平台。其丰富的视觉内容和精准的手部和眼球追踪技术为使用者带来了非同寻常的体验。事实上，无论是视力障碍者、行动不便者或是有肢体差异的用户，这个平台都能为他们提供不同情境的支持。并结合辅助技术，用户就能全面地与应用中的内容进行互动。'
+  翻译: 'visionOS 是一个可以支持不同人群的沉浸式平台。虽然平台的体验融合了引人入胜的视觉内容和手眼追踪技术，但人们仍可以通过其他方式与内容互动。事实上，平台为许多不同人群都提供了支持，包括视力障碍者、行动不便者或是有肢体差异的用户。在辅助技术的帮助下，用户就能全面地与应用中的内容进行互动。'
 - 内容: 'During development, enable VoiceOver and other assistive features and test your app’s accessibility support. Make sure people can navigate your app’s interface intuitively, and that all of the necessary elements are present. Improve the descriptive information for those elements to communicate their intended purpose. And make sure your app adapts to changing conditions, such as changes to the Dynamic Type setting while your app is running.'
   提示: ''
-  翻译: '在开发过程中，建议启用 VoiceOver 以及其他辅助特性，来测试你的应用对辅助功能的支持情况。要确保用户能够直观地操作应用界面，并确认所有必要的元素都已展示到位。为这些元素增加描述信息，传达其预期的用途。同时，确保你的应用能够适配变化中的条件，例如在应用运行时 Dynamic Type 的设置发生变化。'
+  翻译: '在开发过程中，建议启用 VoiceOver 以及其他辅助特性，来测试你的应用对辅助功能的支持情况。要确保用户能够直观地操作应用界面，并确认所有必要的元素都已展示到位。为这些元素增加描述信息，传达其预期的用途。并且确保你的应用能够适配那些会动态改变的设置，例如在应用运行时 Dynamic Type 的设置发生变化。'
 - 内容: 'For general information about supporting accessibility, see Accessibility. For design guidance, see Human Interface Guidelines > Accessibility.'
   提示: ''
   翻译: '如需了解有关支持辅助功能的内容，请参阅“辅助功能”。对于设计指导，参见人机界面指南 > 辅助功能。'
@@ -21,13 +21,13 @@
   翻译: '给 RealityKit 实体添加辅助功能特性'
 - 内容: 'VoiceOver and other assistive technologies rely on the accessibility information that your app’s views and content provide. SwiftUI and UIKit provide default information for the standard system views, but RealityKit doesn’t provide default information for the entities in your scenes.'
   提示: ''
-  翻译: 'VoiceOver 以及其他辅助技术依赖于你的应用展示视图和内容提供的辅助功能信息。虽然 SwiftUI 和 UIKit 已为标准的系统视图控件提供了默认信息，但是 RealityKit 并不会为你场景中的实体预设任何信息。'
+  翻译: 'VoiceOver 以及其他辅助技术依赖于你应用的视图和内容所提供的辅助功能信息。虽然 SwiftUI 和 UIKit 已为标准的系统视图控件提供了默认信息，但是 RealityKit 并不会为你场景中的实体预设任何信息。'
 - 内容: 'To configure the accessibility information for a RealityKit entity, add an instance of AccessibilityComponent to the entity. Use this component to specify the same values you specify for the rest of your app’s views. The following example shows how to create this component and add it to an entity:'
   提示: ''
-  翻译: '要为 RealityKit 实体赋予辅助功能信息，就需要给这个实体添加一个 AccessibilityComponent 实例组件。使用这个组件你可以像设定你应用中其他视图一样地去设置相同的参数值。以下的示例代码展示了如何去创建这个组件并将其添加到实体中：'
+  翻译: '要为 RealityKit 实体赋予辅助功能信息，就需要给这个实体添加一个 AccessibilityComponent 实例。使用这个组件你可以像设定你应用中其他视图一样地去设置相同的参数值。以下的示例代码展示了如何去创建这个组件并将其添加到实体中：'
 - 内容: 'People can use VoiceOver to initiate specific types of actions on your entities. Assign a value to the systemActions property of your component if your entity supports the incrementing or decrementing of its value, or supports activation with a gesture other than a standard tap. You don’t need to set a system action if you let people interact with the entity using a standard single-tap gesture.'
   提示: ''
-  翻译: '用户能够借助 VoiceOver 触发你的实体中的特定操作。如果你的实体支持改变值的大小，或者能通过非标准点击手势被激活，那么就需要为你的组件中的 systemActions 属性关联上响应的值。不过，如果用户使用的是单击手势来和实体进行交互，那就无需设定该属性。'
+  翻译: '用户能够借助 VoiceOver 触发你的实体中的特定操作。如果你的实体支持改变值的大小，或者能通过非标准点击手势被激活，那么就需要为你的组件中的 systemActions 属性设置一个值。不过，如果用户使用的是单击手势来和实体进行交互，那就无需设定该属性。'
 - 内容: 'The following example uses the content of a RealityView to determine when activation events occur on the view’s entities. After subscribing to the view’s activation events, the code sets up an asynchronous task to handle incoming events. When a new event occurs, the task executes the custom code to handle a collision.'
   提示: ''
   翻译: '以下的代码示例利用了 RealityView 的 content 属性来判断在视图上的实体何时去触发激活辅助功能的事件。在订阅了视图的这项事件后，代码会绑定一个异步任务去处理接收到的事件。当新的事件产生时，这个任务就会调用 handleCollision 方法以处理该实体的碰撞事件。'
@@ -39,7 +39,7 @@
   翻译: '当在 visionOS 中启用了 VoiceOver 时，用户会借助手势来浏览你的应用界面和查看相应元素内容。为了避免你的程序干扰到 VoiceOver 的交互，在此期间，系统不会给你的程序传达手势输入的信号。不过，用户仍旧可以通过一个特别的 VoiceOver 手势来启用直接手势操作模式（Direct Gesture mode），这种模式允许在保持 VoiceOver 正常工作的同时恢复手势输入对程序的影响。'
 - 内容: 'Add VoiceOver announcements to your code to communicate the results of meaningful events. VoiceOver speaks these announcements at all times, but they are particularly useful when Direct Gesture mode is on. The following example posts an announcement when a custom gesture causes an interaction with a game piece:'
   提示: ''
-  翻译: '在你的代码中添加支持 VoiceOver 的提示，来传达重要事件的结果。VoiceOver 会随时播放这些提示，尤其是在直接手势操作模式下，这些提示会更具意义。以下的示例代码会在自定义手势与游戏棋子触发交互时产生的提示内容：'
+  翻译: '在你的代码中添加支持 VoiceOver 的提示，来传达重要事件的结果。VoiceOver 会随时播放这些提示，尤其是在直接手势操作模式下，这些提示会更具意义。以下的示例代码会在自定义手势与游戏棋子触发交互时产生提示内容：'
 - 内容: 'Provide alternatives to input that involves physical movement'
   提示: ''
   翻译: '给涉及物理动作的输入方式提供额外选择'
@@ -54,7 +54,7 @@
   翻译: '避免固定于头部的内容'
 - 内容: 'Some assistive technologies allow people to navigate or view your app’s interface using head movements. As the person’s head moves, the assistive technology focuses on the item directly in front of them. Content that follows the movements of the person’s head interferes with the behavior of these assistive technologies.'
   提示: ''
-  翻译: '一些辅助设备能让用户通过头部的移动来产生交互或查看你的应用界面。随着用户头部的移动，这些设备会将内容直接地聚焦在用户实现前。如果一些显示内容随着用户头部的移动而发生变化，那么这将会干扰这些设备的正常使用。'
+  翻译: '一些辅助技术能让用户通过头部的移动来操作或浏览你的应用界面。随着用户头部的移动，这些技术会将内容直接地聚焦在用户的视线前。如果一些显示内容随着用户头部的移动而发生变化，那么这将会干扰这些设备的正常使用。'
 - 内容: 'When designing your interface, place content in windows or anchor it to locations other than the virtual camera. If you do need head-anchored content, provide an alternative solution when relevant assistive technologies are in use. For example, you might move head-anchored content to an anchor point that doesn’t follow the person’s head movements.'
   提示: ''
   翻译: '在构造你的界面时，建议将内容设定在窗口中，或是锚定在与虚拟摄像机无关的位置。如果考虑到你确实要使用固定于头部的内容，那么在用户使用相关辅助技术时，需要提供可替代的解决方案。例如，你可以将原本固定于头部的内容移至锚定位置，使之和用户的头部移动动作无关。'
@@ -69,7 +69,7 @@
   翻译: '对于任何沉浸式设备来说，过于强烈的动态效果可能会让人感到不适，即使对于那些对动效并不敏感的人也是如此。尽量减少对快速移动、弹跳货波状运动、缩放动画、多轴移动、旋转在内的动效运用。特别是当使用设备的人对动效敏感时，需要彻底避免使用这些元素。'
 - 内容: 'The Reduce Motion system setting lets you know when to provide alternatives for all of your app’s motion effects. Access this setting using the accessibilityReduceMotion environment variable in SwiftUI or with the isReduceMotionEnabled property in UIKit. When the setting is true, provide suitable alternatives for motion effects or eliminate them altogether. For example, show a static snapshot of the ocean instead of a video.'
   提示: ''
-  翻译: '系统设置中的减弱动态效果可以提示你什么情况下应当为你应用中的动态效果提供可选方案。你可以在 SwiftUI 中通过 accessibilityReduceMotion 环境变量，或是 UIKit 中通过 isReduceMotionEnabled 属性来访问这个设置。当被开启时，尝试为这些动效呈现合适的替代方案，或是完全移除它们。比如，你可以选择展示一张静态海洋的图片来代替播放视频。'
+  翻译: '系统设置中的减弱动态效果可以提示你什么情况下应当为你应用中的动态效果提供替代方案。你可以在 SwiftUI 中通过 accessibilityReduceMotion 环境变量，或是 UIKit 中通过 isReduceMotionEnabled 属性来访问这个设置。当被开启时，尝试为这些动效呈现合适的替代方案，或是完全移除它们。比如，你可以选择展示一张静态海洋的图片来代替播放视频。'
 - 内容: 'For more information, see Human Interface Guidelines > Motion.'
   提示: ''
   翻译: '欲了解更多内容，详见人机界面指南 > 动态效果'
@@ -81,7 +81,7 @@
   翻译: '对于患有耳聋或听障的人来说，提供高质量的字幕显得格外重要。虽然字幕对于某些人是必须的，但在特定情况下也适用任何人。比如，在喧闹的环境中观看视频时，字幕就大有用处。需要注意的是，不仅对话和文字需要字幕，音乐和音效也同样需要添加字幕。对于空间音频内容，还应在字幕中标注出声音的来源方向。'
 - 内容: 'AVKit and AVFoundation provide built-in support for displaying captioned content. These frameworks configure the font, size, color, and style of the captions automatically according to the person’s accessibility settings. For example, the frameworks adopt the current Dynamic Type setting when displaying text.'
   提示: ''
-  翻译: 'AVKit 和 AVFoundation 具备支持直接显示字幕内容的功能。这些框架会根据用户的辅助功能设置，自动调整字幕的字体、大小、颜色和样式。例如，它们在显示文本时会应用当前的 Dynamic Type 设定。'
+  翻译: 'AVKit 和 AVFoundation 提供对于显示字幕内容的内置支持。这些框架会根据用户的辅助功能设置，自动调整字幕的字体、大小、颜色和样式。例如，它们在显示文本时会应用当前的 Dynamic Type 设定。'
 - 内容: 'If you have a custom video engine, check the isClosedCaptioningEnabled accessibility setting to determine when to display captions. To get the correct appearance information for your captioned content, adopt Media Accessibility in your project. This framework provides you with the optimal font, color, and opacity information to apply to captioned text and images.'
   提示: ''
   翻译: '如果你使用的是自定义的视频引擎，你可以通过检查辅助功能设定中的 isClosedCaptioningEnabled 来判断何时展示字幕。想要获取正确的字幕内容显示效果，你应在项目中引入 Media Accessibility。这个框架能提供最佳的字体、颜色和透明度信息，以便你在带字幕的文本和图像上使用。'
