--- a/project/visionos/adding-3d-content-to-your-app.yml
+++ b/project/visionos/adding-3d-content-to-your-app.yml
@@ -12,7 +12,7 @@
   翻译: '立体显示可以让人感受到更真实的 3D 内容。 3D 内容增添让人感觉更加真实的视觉深度，人们可以从不同角度观看，仿佛这些内容真的就在他们的面前。'
 - 内容: 'When building an app for visionOS, think about ways you might add depth to your app’s interface. The system provides several ways to display 3D content, including in your existing windows, in a volume, and in an immersive space. Choose the options that work best for your app and the content you offer.'
   提示: ''
-  翻译: '在构建 visionOS 应用程序，就要考虑在您的应用程序中添加深度（ z 轴）这个纬度。系统提供了多种方式展示 3D 内容，包括在已有的 2D 窗口( window )，立体窗口( volume )，或者虚拟空间( ImmersiveSpace )。 根据你 App 中内容选择最适合展示方式。'
+  翻译: '在构建 visionOS 应用程序，就要考虑在你的应用程序中添加深度（ z 轴）这个纬度。系统提供了多种方式展示 3D 内容，包括在已有的 2D 窗口( window )，立体窗口( volume )，或者虚拟空间( ImmersiveSpace )。 根据你 App 中内容选择最适合展示方式。'
 - 内容: 'Add depth to traditional 2D windows'
   提示: ''
   翻译: '在二维平面窗口添加深度（ z 轴）维度'
@@ -99,7 +99,7 @@
   翻译: '在用户周围环境中的展示 3D 内容'
 - 内容: 'When you need more control over the placement of your app’s content, add that content to an ImmersiveSpace. An immersive space offers an unbounded area for your content, and you control the size and placement of content within the space. After receiving permission from the user, you can also use ARKit with an immersive space to integrate content into their surroundings. For example, you can use ARKit scene reconstruction to obtain a mesh of furniture and nearby objects and have your content interact with that mesh.'
   提示: ''
-  翻译: '当你需要定义 App 内容所要展示的位置，那么就使用 ImmersiveSpace 展示相应内容。沉浸式空间( immersive space )提供无限区域来展示你的 3D 内容，并且在这个空间里你可以控制 3D 内容的大小和位置。在获得用户许可后，您还可以将 ARKit 与沉浸式空间( immersive space )结合使用，将内容整合到用户周围的环境中。例如，您可以使用 ARKit 场景重建来获取家具和附近物体的三维网格结构，并让您的内容与该三维网格结构进行相互融合。'
+  翻译: '当你需要定义 App 内容所要展示的位置，那么就使用 ImmersiveSpace 展示相应内容。沉浸式空间( immersive space )提供无限区域来展示你的 3D 内容，并且在这个空间里你可以控制 3D 内容的大小和位置。在获得用户许可后，你还可以将 ARKit 与沉浸式空间( immersive space )结合使用，将内容整合到用户周围的环境中。例如，你可以使用 ARKit 场景重建来获取家具和附近物体的三维网格结构，并让你的内容与该三维网格结构进行相互融合。'
 - 内容: 'An ImmersiveSpace is a scene type that you create alongside your app’s other scenes. The following example shows an app that contains an immersive space and a window:'
   提示: ''
   翻译: ' ImmersiveSpace 是一种特定类型的 Scene ，可以和 App 中其他的 Scene 一起创建。下面的例子展示了包含了沉浸式空间( immersive space )和普通窗口( window )的 App 的代码：'
@@ -111,7 +111,7 @@
   翻译: '警告'
 - 内容: 'Be mindful of how much content you include in immersive scenes that use the mixed style. Content that fills a significant portion of the screen, even if that content is partially transparent, can prevent the person from seeing potential hazards in their surroundings. If you want to immerse the person in your content, configure your space with the full style. For more information, see, Creating fully immersive experiences in your app.'
   提示: ''
-  翻译: '请注意一下在沉浸式场景( immersive scenes )中有多少内容使用 mixed 类型。因为如果 3D 内容占满屏幕很大一部分的，即使可以看见部分周围环境，也可能使用户完全无法看到周围环境中的潜在危险。如果您想让用户完全沉浸在您的内容中，请使 full 配置你的空间。如需了解更多信息，请参阅 Creating fully immersive experiences in your app 。'
+  翻译: '请注意一下在沉浸式场景( immersive scenes )中有多少内容使用 mixed 类型。因为如果 3D 内容占满屏幕很大一部分的，即使可以看见部分周围环境，也可能使用户完全无法看到周围环境中的潜在危险。如果想让用户完全沉浸在你的内容中，请使 full 配置你的空间。如需了解更多信息，请参阅 Creating fully immersive experiences in your app 。'
 - 内容: 'Remember to set the position of items you place in an ImmersiveSpace. Position SwiftUI views using modifiers, and position a RealityKit entity using its transform component. SwiftUI places the origin of a space at a person’s feet initially, but can change this origin in response to other events. For example, the system might shift the origin to accommodate a SharePlay activity that displays your content with Spatial Personas. If you need to position SwiftUI views and RealityKit entities relative to one another, perform any needed coordinate conversions using the methods in the content parameter of RealityView.'
   提示: '译者注：这里将 Spatial Personas 翻译为“用户虚拟角色”，是用户的拟真形象，是苹果的一项新技术。更多关于 SharePlay activity 和 Spatial Personas，可以通过 Design spatial SharePlay experiences 视频了解。'
   翻译: '记得在 ImmersiveSpace 中设置实体的位置。 SwiftUI 中，通过相应的修改器 position(x:y:) 、 position(_:CGPoint) 设置视图的位置，对于 RealityKit 实体，则是通过设置 transform 相关的属性，来设置实体的位置。SwiftUI 会以户所站的位置作为空间原点初始位置，但是原点位置可以随其他事件而改变。例如，当需要同时展示有用户虚拟角色的 SharePlay Activity 和 你的 3D 内容时，系统会平移你的空间原点的位置。如果需要对 SwiftUI 视图和 RealityKit 实体进行相对定位，请使用 RealityView 和 RealityViewContent 的参数和方法来实现所需的坐标转换。'
